# gentoo-libbash

./: .gitignore  Doxyfile  Makefile.am  README  autogen.sh  configure.ac  libbash.pc.in  test_coverage.sh
bashast/: bashast.g  bashwalker.g  libbashWalker.g
bashast/features_script/: features.sh  features.sh.ast  features.sh.tokens  features.sh.walker.tokens
bashast/gunit/: arith_main.gunit  array.gunit  assoc_array.gunit  brace.gunit  command_sub.gunit  comment.gunit  compound.gunit  cond_main.gunit  continued_lines.gunit  expansions.gunit  fname.gunit  function.gunit  list.gunit  param_main.gunit  pipeline.gunit  proc_sub.gunit  process_substitution.gunit  redir.gunit  runtests.sh  simp_command.gunit  simp_prog.gunit
coding_standard/: coding_standard.tex
doc/: main_page.doxygen
include/: common.h  exceptions.h  illegal_argument_exception.h  interpreter_exception.h  libbash.h  parse_exception.h  runtime_exception.h
libbash-0.1/: AUTHORS  README  autogen.sh  configure.ac
libbash-0.1/bashast/: bashast.g
libbash-0.1/bashast/features_script/: features.sh.ast
libbash-0.1/bashast/gunit/: arith_main.gunit  compound.gunit  cond_main.gunit  continued_lines.gunit  expansions.gunit  param_main.gunit  pipeline.gunit  simp_command.gunit  simp_prog.gunit
libbash-0.1/scripts/: arithmetic_assignment.bash  arithmetic_assignment.bash.result  command_execution.bash  compound_command.bash  foo.eclass  function_def.bash.result  isolated_functions.bash.result  sunpinyin-2.0.3-r1.ebuild.result  test_expr.bash  test_expr.bash.result
libbash-0.1/src/: cppbash_builtin.cpp  cppbash_builtin.h  libbash.cpp
libbash-0.1/src/builtins/: boolean_builtins.h  builtin_exceptions.h  declare_builtin.h  eval_builtin.cpp  eval_builtin.h  inherit_builtin.cpp  let_builtin.cpp  let_builtin.h  shopt_builtin.cpp  source_builtin.cpp  source_builtin.h  unset_builtin.cpp  unset_builtin.h
libbash-0.1/src/builtins/tests/: boolean_tests.cpp  declare_tests.cpp  echo_tests.cpp  printf_tests.cpp  return_tests.cpp  shopt_tests.cpp
libbash-0.1/src/core/: bash_ast.h  divide_by_zero_error.h  exceptions.h  function.h  illegal_argument_exception.h  interpreter_exception.h  readonly_exception.h  symbols.hpp
libbash-0.1/src/core/tests/: bash_ast_test.cpp  interpreter_test.cpp  symbols_test.cpp
libbash-0.1/test/: api_test.cpp  ast_printer_test.sh  run_tests.cpp  script_compiler.sh  verify_error_output_test.sh
libbash-0.1/utils/: ast_printer.cpp  command_line.h  isolated-functions.sh  metadata_diff.sh  metadata_generator.cpp
scripts/: arithmetic_assignment.bash  arithmetic_assignment.bash.result  arithmetic_assignment.ebuild  arithmetic_assignment.ebuild.result  binary_arithmetic.bash  binary_arithmetic.bash.result  binary_arithmetic.ebuild  binary_arithmetic.ebuild.result  command_execution.bash  command_execution.bash.result  command_execution.ebuild  command_execution.ebuild.result  compound_command.bash  compound_command.bash.result  function_def.bash  function_def.bash.result  function_def.ebuild  function_def.ebuild.result  here_document.ast  here_document.sh  illegal_script.sh.tokens  isolated_functions.bash  naughty_tests  naughty_tests.result  source_return.sh  source_true.sh  sunpinyin-2.0.3-r1.ebuild  sunpinyin-2.0.3-r1.ebuild.result  test_expr.bash  test_expr.bash.result  var_def.bash  var_def.bash.result  var_def.ebuild  var_def.ebuild.result  var_expansion.bash  var_expansion.bash.result  var_expansion.ebuild  var_expansion.ebuild.result
src/: common.h  cppbash_builtin.cpp  cppbash_builtin.h  libbash.cpp  libbash.h
src/builtins/: boolean_builtins.h  break_builtin.cpp  break_builtin.h  builtin_exceptions.h  continue_builtin.cpp  continue_builtin.h  declare_builtin.cpp  declare_builtin.h  echo_builtin.cpp  echo_builtin.h  eval_builtin.cpp  eval_builtin.h  export_builtin.cpp  export_builtin.h  inherit_builtin.cpp  inherit_builtin.h  let_builtin.cpp  let_builtin.h  local_builtin.cpp  local_builtin.h  printf_builtin.cpp  printf_builtin.h  read_builtin.cpp  read_builtin.h  return_builtin.cpp  return_builtin.h  set_builtin.cpp  set_builtin.h  shift_builtin.cpp  shift_builtin.h  shopt_builtin.cpp  shopt_builtin.h  source_builtin.cpp  source_builtin.h  unset_builtin.cpp  unset_builtin.h
src/builtins/tests/: boolean_tests.cpp  break_tests.cpp  continue_tests.cpp  declare_tests.cpp  echo_tests.cpp  printf_tests.cpp  read_tests.cpp  return_tests.cpp  set_tests.cpp  shift_tests.cpp  shopt_tests.cpp  source_tests.cpp  unset_tests.cpp
src/core/: bash_ast.cpp  bash_ast.h  bash_condition.cpp  bash_condition.h  divide_by_zero_error.h  function.cpp  function.h  interpreter.cpp  interpreter.h  interpreter_exception.h  parse_exception.h  parser_builder.cpp  parser_builder.h  readonly_exception.h  runtime_exception.h  symbols.hpp  unset_exception.h  unsupported_exception.h  walker_builder.cpp  walker_builder.h
src/core/tests/: bash_ast_test.cpp  bash_condition_test.cpp  interpreter_test.cpp  symbols_test.cpp
test/: api_test.cpp  ast_printer.cpp  ast_printer_test.sh  bash_compiler.sh  bash_result_tests.sh  ebuild_compiler.sh  post_check.cpp  run_tests.cpp  script_compiler.sh  test.cpp  test.h  test_coverage.sh  variable_printer.cpp  verify_bashs_test.sh  verify_ebuilds_test.sh  verify_error_output_test.sh  verify_here_document.sh  walker_test.cpp
utils/: ast_printer.cpp  bash.cpp  command_line.cpp  command_line.h  instruo.cpp  isolated-functions.sh  meta_gen.sh  metadata.cpp  metadata.h  metadata_diff.sh  metadata_generator.cpp  variable_printer.cpp
