###############################################
#Please use git log for copyright holder and year information
#
#This file is part of libbash.
#
#libbash is free software: you can redistribute it and/or modify
#it under the terms of the GNU General Public License as published by
#the Free Software Foundation, either version 2 of the License, or
#(at your option) any later version.
#
#libbash is distributed in the hope that it will be useful,
#but WITHOUT ANY WARRANTY; without even the implied warranty of
#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#GNU General Public License for more details.
#
#You should have received a copy of the GNU General Public License
#along with libbash.  If not, see <http://www.gnu.org/licenses/>.
###############################################
# Makefile.am for libbash
# Author: Nathan Eloe
###############################################
include doxygen.am

ACLOCAL_AMFLAGS = -I m4

TEST_EXTENSIONS= .gunit .bash .ebuild
GUNIT_LOG_COMPILER = $(srcdir)/bashast/gunit/runtests.sh
AM_GUNIT_LOG_FLAGS = @antlr_cp@:.
GUNIT_TESTS = bashast/gunit/arith_main.gunit \
			  bashast/gunit/array.gunit \
			  bashast/gunit/assoc_array.gunit \
			  bashast/gunit/brace.gunit \
			  bashast/gunit/command_sub.gunit \
			  bashast/gunit/comment.gunit \
			  bashast/gunit/compound.gunit \
			  bashast/gunit/cond_main.gunit \
			  bashast/gunit/continued_lines.gunit \
			  bashast/gunit/expansions.gunit \
			  bashast/gunit/fname.gunit \
			  bashast/gunit/function.gunit \
			  bashast/gunit/list.gunit \
			  bashast/gunit/param_main.gunit \
			  bashast/gunit/pipeline.gunit \
			  bashast/gunit/process_substitution.gunit \
			  bashast/gunit/redir.gunit \
			  bashast/gunit/simp_command.gunit \
			  bashast/gunit/simp_prog.gunit

BASH_LOG_COMPILER = $(srcdir)/test/script_compiler.sh
BASH_TESTS = scripts/var_def.bash \
			 scripts/var_expansion.bash \
			 scripts/command_execution.bash \
			 scripts/function_def.bash \
			 scripts/arithmetic_assignment.bash \
			 scripts/compound_command.bash \
			 scripts/test_expr.bash \
			 scripts/binary_arithmetic.bash
BASH_RESULT = scripts/var_def.bash.result \
			  scripts/var_expansion.bash.result \
			  scripts/command_execution.bash.result \
			  scripts/function_def.bash.result \
			  scripts/arithmetic_assignment.bash.result \
			  scripts/compound_command.bash.result \
			  scripts/test_expr.bash.result \
			  scripts/binary_arithmetic.bash.result

EBUILD_LOG_COMPILER = $(srcdir)/test/ebuild_compiler.sh
EBUILD_TESTS = scripts/sunpinyin-2.0.3-r1.ebuild
EBUILD_RESULT = scripts/sunpinyin-2.0.3-r1.ebuild.result

TESTS = $(GUNIT_TESTS) $(BASH_TESTS) $(EBUILD_TESTS)
# these get cleaned so only add autogenerated stuff or modify CLEANFILES
check_JAVA = bashast/bashastLexer.java bashast/bashastParser.java
AM_JAVACFLAGS = -source 1.4 -classpath @antlr_cp@

AM_CXXFLAGS = -std=c++0x
AM_CPPFLAGS = -I$(top_srcdir)/src

if DEVELOPER_MODE
# -Weffc++ seems to be giving false positives on protected non
# virtual destructors in base classes
AM_CXXFLAGS += -Wall \
			   -Wextra \
			   -Wold-style-cast \
			   -Woverloaded-virtual \
			   -Wsign-promo \
			   -pedantic-errors \
			   -Werror
AM_CPPFLAGS += -D_GLIBCXX_DEBUG
endif

if HAVE_GTEST
TESTS += cppunittests test/ast_printer_test.sh test/verify_bashs_test.sh test/verify_error_output_test.sh
check_PROGRAMS = cppunittests

cppunittests_SOURCES =  test/run_tests.cpp \
						src/core/tests/symbols_test.cpp \
						src/core/tests/interpreter_test.cpp \
						src/core/tests/bash_ast_test.cpp \
						src/core/tests/bash_condition_test.cpp \
						src/builtins/tests/continue_tests.cpp \
						src/builtins/tests/echo_tests.cpp \
						src/builtins/tests/declare_tests.cpp \
						src/builtins/tests/boolean_tests.cpp \
						src/builtins/tests/source_tests.cpp \
						src/builtins/tests/shopt_tests.cpp \
						src/builtins/tests/return_tests.cpp \
						test/test.h \
						test/test.cpp \
						test/post_check.cpp \
						test/api_test.cpp \
						test/walker_test.cpp
cppunittests_LDADD = libcppbash.la \
					 $(GTEST_LIBS) \
					 $(BOOST_SYSTEM_LIB) \
					 $(BOOST_FILESYSTEM_LIB)
cppunittests_LDFLAGS = -static
cppunittests_CPPFLAGS = $(AM_CPPFLAGS) -I$(top_srcdir)/test/

endif

noinst_LIBRARIES = libmetadata.a

libmetadata_a_SOURCES = utils/metadata.h utils/metadata.cpp
libmetadata_a_CPPFLAGS = $(AM_CPPFLAGS) -Iutils

noinst_PROGRAMS = variable_printer metadata_generator ast_printer instruo

variable_printer_SOURCES = utils/variable_printer.cpp
variable_printer_LDADD = libcppbash.la

metadata_generator_SOURCES = utils/metadata_generator.cpp
metadata_generator_LDADD = libcppbash.la libmetadata.a
metadata_generator_CPPFLAGS = $(AM_CPPFLAGS) -Iutils

instruo_SOURCES = utils/instruo.cpp utils/command_line.cpp utils/command_line.h
instruo_LDADD = libcppbash.la @PALUDIS_LIBS@ libmetadata.a
instruo_CPPFLAGS = $(AM_CPPFLAGS) @PALUDIS_CFLAGS@ -Iutils
instruo_CXXFLAGS = $(AM_CXXFLAGS) -Wno-extra

ast_printer_SOURCES = utils/ast_printer.cpp
ast_printer_LDADD = libcppbash.la $(BOOST_PROGRAM_OPTIONS_LIB)
ast_printer_LDFLAGS = -static
# boost is probably compiled without debug STL so if that is used
# linking will fail
ast_printer_CPPFLAGS = $(AM_CPPFLAGS) -U_GLIBCXX_DEBUG $(BOOST_CPPFLAGS)

GENERATED_PARSER_C = libbashLexer.c libbashParser.c
GENERATED_PARSER_H = libbashLexer.h libbashParser.h
GENERATED_WALKER_CPP = libbashWalker.cpp
GENERATED_WALKER_H = libbashWalker.h
BUILT_SOURCES = $(GENERATED_PARSER_C) \
				$(GENERATED_PARSER_H) \
				$(GENERATED_WALKER_CPP) \
				$(GENERATED_WALKER_H) \
				$(check_JAVA)
CLEANFILES = $(GENERATED_PARSER_C) \
			 $(GENERATED_PARSER_H) \
			 $(GENERATED_WALKER_CPP) \
			 $(GENERATED_WALKER_H) \
			 $(check_JAVA) \
			 libbash.g \
			 libbash.tokens \
			 bashast/bashast.tokens \
			 libbashWalker.tokens \
			 javagrammar.run \
			 cgrammar.run \
			 walker.run \
			 massif.out \
			 callgrind.out

lib_LTLIBRARIES = libcppbash.la
libcppbash_la_SOURCES = src/common.h \
						src/libbash.h \
						src/libbash.cpp \
						src/cppbash_builtin.cpp \
						src/cppbash_builtin.h \
						src/builtins/continue_builtin.cpp \
						src/builtins/continue_builtin.h \
						src/builtins/echo_builtin.cpp \
						src/builtins/echo_builtin.h \
						src/builtins/eval_builtin.cpp \
						src/builtins/eval_builtin.h \
						src/builtins/declare_builtin.cpp \
						src/builtins/declare_builtin.h \
						src/builtins/boolean_builtins.h \
						src/builtins/source_builtin.h \
						src/builtins/source_builtin.cpp \
						src/builtins/shopt_builtin.h \
						src/builtins/shopt_builtin.cpp \
						src/builtins/return_builtin.h \
						src/builtins/return_builtin.cpp \
						src/builtins/let_builtin.h \
						src/builtins/let_builtin.cpp \
						src/builtins/inherit_builtin.h \
						src/builtins/inherit_builtin.cpp \
						src/builtins/unset_builtin.h \
						src/builtins/unset_builtin.cpp \
						src/builtins/builtin_exceptions.h \
						$(GENERATED_PARSER_C) \
						$(GENERATED_PARSER_H) \
						src/core/interpreter_exception.h \
						src/core/unset_exception.h \
						src/core/interpreter.cpp \
						src/core/interpreter.h \
						src/core/symbols.hpp \
						src/core/bash_condition.h \
						src/core/bash_condition.cpp \
						src/core/bash_ast.cpp \
						src/core/bash_ast.h

# separate library because we need per file CXXFLAGS
# as antlr generated code does not pass our strict developer
# warning settings
noinst_LTLIBRARIES = libwalker.la
libwalker_la_SOURCES = $(GENERATED_WALKER_CPP) \
					   $(GENERATED_WALKER_H)

libwalker_la_CXXFLAGS = -std=c++0x \
						-fvisibility=hidden \
						-fvisibility-inlines-hidden

libcppbash_la_CXXFLAGS = $(AM_CXXFLAGS) \
						 -fvisibility=hidden \
						 -fvisibility-inlines-hidden
if DEVELOPER_MODE
# Paludis cannot get compiled with these flags.
# So we only turn them on for our library.
libcppbash_la_CXXFLAGS += -Wconversion -Wsign-conversion
endif
libcppbash_la_CFLAGS = $(AM_CFLAGS) -fvisibility=hidden
libcppbash_la_LIBADD = libwalker.la

EXTRA_DIST = bashast/bashast.g \
			 bashast/libbashWalker.g \
			 bashast/features_script/features.sh \
			 bashast/features_script/features.sh.ast \
			 bashast/features_script/features.sh.tokens \
			 test/ast_printer_test.sh \
			 test/verify_bashs_test.sh \
			 test/verify_error_output_test.sh \
			 scripts/source_false.sh \
			 scripts/source_true.sh \
			 scripts/source_return.sh \
			 scripts/illegal_script.sh \
			 scripts/foo.eclass \
			 scripts/bar.eclass \
			 utils/metadata_diff.sh \
			 utils/isolated-functions.sh \
			 test_coverage.sh \
			 autogen.sh \
			 $(BASH_TESTS) \
			 $(BASH_RESULT) \
			 $(EBUILD_TESTS) \
			 $(EBUILD_RESULT) \
			 $(GUNIT_TESTS) \
			 $(GUNIT_LOG_COMPILER) \
			 $(BASH_LOG_COMPILER) \
			 $(EBUILD_LOG_COMPILER)

coding_standard.pdf: coding_standard/coding_standard.tex
	$(AM_V_GEN)@PDFLATEX@ coding_standard/coding_standard.tex 2&>1 > /dev/null

ANTLR = @JAVA@ -classpath @antlr_cp@ org.antlr.Tool

cgrammar.run: libbash.g
	$(AM_V_at)touch $@.tmp
	$(AM_V_GEN)$(ANTLR) -fo . $<
	$(AM_V_at)mv $@.tmp $@

libbash.g: bashast/bashast.g
	$(AM_V_at)sed -e 's/ASTLabelType	= CommonTree;/ASTLabelType	= pANTLR3_BASE_TREE;/g' \
				  -e 's/language	= Java;/language	= C;/g' \
				  -e 's/grammar bashast;/grammar libbash;/g' $< > $@

# Avoid initializing C++ type to NULL by sed, variables whose name
# starts with libbash_ will be stripped
walker.run: bashast/libbashWalker.g cgrammar.run
	$(AM_V_at)touch $@.tmp
	$(AM_V_GEN)$(ANTLR) -fo . $<
	$(AM_V_at)sed -i -e 's/\(libbash_.*\) = NULL/\1/' libbashWalker.c
	$(AM_V_at)mv libbashWalker.{c,cpp}
	$(AM_V_at)mv $@.tmp $@

$(GENERATED_PARSER_C): cgrammar.run
$(GENERATED_PARSER_H): cgrammar.run

$(GENERATED_WALKER_CPP): walker.run
$(GENERATED_WALKER_H): walker.run

javagrammar.run: bashast/bashast.g
	$(AM_V_at)touch $@.tmp
	$(AM_V_GEN)$(ANTLR) -fo bashast $<
	$(AM_V_at)mv $@.tmp $@

$(check_JAVA): javagrammar.run

massif.out: ast_printer
		libtool --mode=execute valgrind \
		--tool=massif --massif-out-file=massif.out \
		./ast_printer -nsf /usr/portage/eclass/versionator.eclass

massif: massif.out
	ms_print --threshold=10 $<

callgrind.out: ast_printer
	libtool --mode=execute valgrind \
		--tool=callgrind --callgrind-out-file=callgrind.out \
		./ast_printer -s  -f /usr/portage/eclass/versionator.eclass

benchmark_parser: callgrind.out
	callgrind_annotate callgrind.out

test_coverage: dist
	MAKE=$(MAKE) DIST_ARCHIVES=$(DIST_ARCHIVES) ./test_coverage.sh
	rm $(DIST_ARCHIVES)
